--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,8 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/BloodPressure/output/o
+/BloodPressure/o
+/BloodPressure/l
+/BloodPressure/l1o
+/BloodPressure/t1o
